logs/specclient-for-pyxes.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/SpecClient'...
Compiling './lib/python3.5/site-packages/SpecClient/SpecArray.py'...
***   File "./lib/python3.5/site-packages/SpecClient/SpecArray.py", line 103
    raise SpecArrayError, "Spec arrays cannot have more than 2 dimensions"
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/SpecClient/SpecCommand.py'...
***   File "./lib/python3.5/site-packages/SpecClient/SpecCommand.py", line 39
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/SpecClient/SpecEventsDispatcher.py'...
***   File "./lib/python3.5/site-packages/SpecClient/SpecEventsDispatcher.py", line 28
    raise SpecClientDispatcherError, 'Unknown slot type %s %s' % (repr(slot), type(slot))
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/SpecClient/SpecMotor.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (SpecMotor.py, line 46)
Compiling './lib/python3.5/site-packages/SpecClient/SpecScan.py'...
***   File "./lib/python3.5/site-packages/SpecClient/SpecScan.py", line 203
    if DEBUG: print "SpecScanA.__newScan", scanParams
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/SpecClient/SpecServer.py'...
***   File "./lib/python3.5/site-packages/SpecClient/SpecServer.py", line 46
    print "client byte order: ", self.clientOrder
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/SpecClient/saferef.py'...
***   File "./lib/python3.5/site-packages/SpecClient/saferef.py", line 125
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/SpecClient_for_pyxes-2017.3.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
